syntax = "proto3";

package meal;

service Meal {
  rpc Create (DefaultMealRequest) returns (DefaultReply) {}

  rpc FindById (RequiredIdRequest) returns (DefaultMealReply) {}

  rpc Remove (RequiredIdRequest) returns (DefaultReply) {}

  rpc Update (UpdateMealRequest) returns (DefaultMealReply) {}
}

message IngredientModel {
  string name = 1;
  string measure = 2;
}

message RecipeModel {
  string instruction = 1;
  repeated IngredientModel ingredients = 2;
}

message ReviewModel {
  string mealId = 1;
  string accountId = 2;
  float rating = 3;
  string content = 4;
}

message MealModel {
  string id = 1;
  string name = 2;
  string description = 3;
  string origin = 4;
  string image = 5;
  string themealdbId = 6;
  string ownerId = 7;
  string categoryId = 8;
  RecipeModel recipe = 9;
}

message DefaultMealRequest {
  MealModel meal = 1;
}

message RequiredIdRequest {
  required string id = 1;
}

message UpdateMealRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string origin = 4;
  string image = 5;
  ReviewModel reviews = 7;
  RecipeModel recipe = 8;
}

message DefaultReply {
  bool success = 1;
  string message = 2;
}

message DefaultMealReply {
  bool success = 1;
  string message = 2;
  MealModel meal = 3;
}
